force-app/main/default/objects/C3C_QueueProcessingLogItem__c/C3C_QueueProcessingLogItem__c.object-meta.xml
<CustomObject>
    <label>Log do Item da Fila de Processamento</label>
    <nameField>
        <displayFormat>LOG-{000000}</displayFormat>
        <label>Nome de Log do Item da Fila de Processam</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs do Item da Fila de Processamento</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>