force-app/main/default/objects/C3C_QueueProcessingLogItem__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <label>Mensagem de Erro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>