force-app/main/default/objects/C3C_QueueProcessingLogItem__c/fields/QueueProcessingItemId__c.field-meta.xml
<CustomField>
    <fullName>QueueProcessingItemId__c</fullName>
    <label>Item da Fila de Processamento</label>
    <referenceTo>C3C_QueueProcessingItem__c</referenceTo>
    <relationshipLabel>Logs do Item da Fila de Processamento</relationshipLabel>
    <relationshipName>Logs_do_Item_da_Fila_de_Processamento</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>