force-app/main/default/objects/C3C_QueueProcessingLogItem__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <label>Resposta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>