force-app/main/default/objects/C3C_QueueProcessingLogItem__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>IF(ISBLANK(ErrorMessage__c), &apos;Sucesso&apos;, &apos;Erro&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo</label>
    <type>Text</type>
</CustomField>